<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/itemHome"
            android:icon="@drawable/ic_nav_drawer_item_home"
            android:title="@string/nav_drawer_item_home" />

        <item
            android:id="@+id/itemBrowse"
            android:icon="@drawable/ic_nav_drawer_item_browse"
            android:title="@string/nav_drawer_item_browse" />

        <item
            android:id="@+id/itemSearch"
            android:icon="@drawable/ic_nav_drawer_item_search"
            android:title="@string/nav_drawer_item_search" />

        <item
            android:id="@+id/itemAbout"
            android:icon="@drawable/ic_nav_drawer_item_about"
            android:title="@string/nav_drawer_item_about" />

    </group>

</menu>