<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class=".product.detail.ProductDetailsFragmentBinding">

        <import type="android.view.View" />

        <variable
            name="product"
            type="com.vertaperic.store.product.Product" />

        <variable
            name="cartItem"
            type="com.vertaperic.store.cart.CartItem" />

        <variable
            name="presenter"
            type="com.vertaperic.store.product.detail.ProductDetailsContract.Presenter" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbarLayout"
            style="@style/Widget.App.AppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/product_detail_appbar_height"
            android:fitsSystemWindows="true">

            <!--
            Setting the background to CollapsingToolbarLayout and top/bottom margin to image because
            of small image size.
            -->
            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/product_image_background_color"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="false">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/product_detail_image_margin"
                    android:layout_marginTop="@dimen/product_detail_image_margin"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitCenter"
                    android:src="@{product.imageUri}"
                    app:layout_collapseMode="parallax"
                    app:placeHolder="@{@drawable/ic_image_place_holder}"
                    tools:ignore="ContentDescription" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/ic_toolbar_navigation_back"
                    app:navigationOnClickListener="@{() -> presenter.onToolbarNavigationClick()}"
                    app:onMenuItemClickListener="@{(menu) -> presenter.onMenuItemClick(menu)}" />

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{product == null ? View.GONE : View.VISIBLE}"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/layout_outer_padding">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/widget_inner_margin_medium"
                        android:maxLines="2"
                        android:text="@{product.name}"
                        android:textAppearance="@style/TextAppearance.App.Primary.Large" />

                    <!-- rating is hard coded for all items, for demo purpose only -->
                    <RatingBar
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/widget_inner_padding_small"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:rating="3.5"
                        android:stepSize="0.5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_detail_in_stock"
                        android:textAppearance="@style/TextAppearance.App.Primary.Small"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/widget_inner_margin_small"
                        android:text="@{@string/product_price_format(product.price)}"
                        android:textAppearance="@style/TextAppearance.App.Primary.Large"
                        android:textColor="?attr/colorPrimaryDark" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/app_divider_color" />

                <!-- to display hardcoded highlights and description only for demo purpose -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/layout_outer_padding">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_product_highlights"
                            android:drawablePadding="@dimen/widget_inner_margin_small"
                            android:drawableStart="@drawable/ic_product_highlights"
                            android:gravity="center_vertical"
                            android:text="@string/product_detail_highlight"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.App.Secondary.Small" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/widget_inner_margin_small"
                            android:text="@string/product_detail_default_highlight"
                            android:textAppearance="@style/TextAppearance.App.Primary.Small" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/app_divider_color" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/layout_outer_padding">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_product_description"
                            android:drawablePadding="@dimen/widget_inner_margin_small"
                            android:drawableStart="@drawable/ic_product_description"
                            android:gravity="center_vertical"
                            android:text="@string/product_detail_description"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.App.Secondary.Small" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/widget_inner_margin_small"
                            android:text="@string/product_detail_default_description"
                            android:textAppearance="@style/TextAppearance.App.Primary.Small" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>


        <!-- FAB won't be visible if product is not available or product is already added to cart -->
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabAddToCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/layout_outer_padding"
            android:layout_marginRight="@dimen/layout_outer_padding"
            android:onClick="@{() -> presenter.addProductToCart(product)}"
            android:src="@drawable/ic_add_product_to_cart"
            android:visibility="@{product == null || cartItem != null ? View.GONE : View.VISIBLE}"
            app:layout_anchor="@id/appbarLayout"
            app:layout_anchorGravity="bottom|end" />


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </android.support.design.widget.CoordinatorLayout>

</layout>